# assecor-assessment-cpp

./: CMakeLists.txt  README.md
app/: main.cpp
include/: customer.h  customer_archive.h  customer_formatter.h
src/: customer_archive.cpp
tests/: integration.cpp  unit_archive.cpp  unit_formatter.cpp
